Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2014-08-26 05:18:50Z
          - new role for plugins: Dist::Zilla::Role::FileWatcher, to
            facilitate common usecases for watching and locking files

0.003     2014-01-15 03:09:32Z
          - test fixed to work around a use of the file metaclass in older
            Dist::Zilla::Role::FileInjector

0.002     2014-01-12 08:05:15Z
          - the checksum is updated (and therefore the callback is invoked)
            for every change to the content, not just (potentially) the first
            (thanks, Yanick!)

0.001     2013-10-21 01:49:13Z
          - Initial release.